--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ html {
 
 body {
   font-family: "Manrope", sans-serif;
+  /* for flags */
+  font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
   color: var(--color-light--2);
   font-weight: 400;
   line-height: 1.6;
