used useMap hook to set position in map in new component, used effect to set position for data retention on navigating back, and used useMapEvents hook in a new component to programatically navigate to the form with the position in the url

--- a/src/components/Map.module.css
+++ b/src/components/Map.module.css
@@ -1,7 +1,3 @@
-body {
-  font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
-}
-
 .mapContainer {
   flex: 1;
   height: 100%;
@@ -26,6 +22,8 @@ body {
 }
 
 :global(.leaflet-popup .leaflet-popup-content) {
+  /* flag emoji */
+  font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
   font-size: 1.5rem;
   display: flex;
   align-items: center;
