--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  /* font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif; */
 }
 
 .row {
@@ -25,6 +26,7 @@
   right: 1rem;
   top: 2.7rem;
   font-size: 2.8rem;
+  font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
 }
 
 .form.loading {
