--- a/src/components/CityList.module.css
+++ b/src/components/CityList.module.css
@@ -2,9 +2,9 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  overflow-y: scroll;
-  overflow-x: hidden;
-
+  /* overflow-x: hidden; */
+  /* overflow-y: visible; */
+  overflow: scroll;
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
